# magicgeek-buddy

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
.github/workflows/: ci.yml  release.yml
main/: CMakeLists.txt  app_version.h  ble_nus.c  ble_nus.h  bridge.c  bridge.h  buddy.c  buddy.h  debug_log.c  debug_log.h  display.c  display.h  framebuffer.c  framebuffer.h  gfx.c  gfx.h  idf_component.yml  main.c  net_trust.c  net_trust.h  ota_server.c  ota_server.h  stats.c  stats.h  storage.c  storage.h  touch_button.c  touch_button.h  translog.c  translog.h  ui.c  ui.h  wifi_manager.c  wifi_manager.h
main/buddies/: axolotl.c  blob.c  cactus.c  capybara.c  cat.c  chonk.c  dragon.c  duck.c  ghost.c  goose.c  mushroom.c  octopus.c  owl.c  penguin.c  rabbit.c  robot.c  snail.c  turtle.c
